--- a/Userin.html
+++ b/Userin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CipherGuard</title>
+  <title>CipherCrypt</title>
   <style>
     body {
         font-family: 'Arial', sans-serif;
@@ -121,7 +121,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 id="heading">CipherGuard</h1>
+    <h1 id="heading">CipherCrypt</h1>
     <div class="split-line"></div>
     <div class="section">
       <div class="section-left">
